# SECAR-detection-Geant4

./: .gitignore  CMakeLists.txt  GNUmakefile  README.md  SECAR.cc  environment.sh  multipleRuns.sh
include/: ActionInitialization.hh  AnalysisManager.hh  CADMesh.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh  SensitiveDetectorHit.hh  SensitiveDetectorHit_IC.hh  SensitiveDetectorHit_SiMon.hh  SensitiveDetector_IC.hh  SensitiveDetector_SiMon.hh  SteppingAction.hh
macros/: Ar_pn_K.mac  alpha_source.mac  am241.mac  argon.mac  cf252.mac  cobalt.mac  cobalt_iron.mac  cs137.mac  iron.mac  iron_beam.mac  na22.mac  neutron_monoE.mac  run.mac  run1.mac  vis.mac  wattCf252.mac
neutronInput/: cf252integralSpectrum  neutrons_upto15.mac  plotFromTxt.C
neutronInput/neutrons/: n_100.mac  n_1000.mac  n_10000.mac  n_1100.mac  n_1200.mac  n_1300.mac  n_1400.mac  n_1500.mac  n_200.mac  n_2000.mac  n_2500.mac  n_300.mac  n_3000.mac  n_3500.mac  n_400.mac  n_4000.mac  n_4500.mac  n_500.mac  n_5000.mac  n_5500.mac  n_600.mac  n_6000.mac  n_700.mac  n_7000.mac  n_800.mac  n_8000.mac  n_900.mac  n_9000.mac
neutronInput/neutrons_4pi/: n_100.mac  n_1000.mac  n_10000.mac  n_1100.mac  n_1200.mac  n_1300.mac  n_1400.mac  n_1500.mac  n_200.mac  n_2000.mac  n_2500.mac  n_300.mac  n_3000.mac  n_3500.mac  n_400.mac  n_4000.mac  n_4500.mac  n_500.mac  n_5000.mac  n_5500.mac  n_600.mac  n_6000.mac  n_6500.mac  n_700.mac  n_7000.mac  n_7500.mac  n_800.mac  n_8000.mac  n_8500.mac  n_900.mac  n_9000.mac  n_9500.mac
src/: ActionInitialization.cc  AnalysisManager.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SensitiveDetector.cc  SensitiveDetectorHit.cc  SensitiveDetectorHit_IC.cc  SensitiveDetectorHit_SiMon.cc  SensitiveDetector_IC.cc  SensitiveDetector_SiMon.cc  SteppingAction.cc
useful_codes/: Co_entries.txt  Fe_pn_entries.txt  HistEntriesToTxt.cpp  TotalEfficiencyCalc.cpp  angles.C  entries.C  out.txt  plotAndConvertToTxt.cpp  plotFromTxt.C  root2csv.py  root_to_pkl.py
